[tool.poetry]
name = "gcp-oauth-clients"
version = "0.1.0"
description = ""
authors = ["Uriel Mandujano <5422638+konkolorado@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
mypy = "^0.931"
black = "^22.1.0"
isort = "^5.10.1"
types-requests = "^2.27.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
